force-app/main/default/objects/LiveEngage__Object_Mapping__c/fields/LiveEngage__Account_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Account_Field_Name__c</fullName>
    <label>Account Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>