force-app/main/default/objects/LiveEngage__Object_Mapping__c/fields/LiveEngage__Chat_Transcript_Field__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Chat_Transcript_Field__c</fullName>
    <label>Chat Transcript Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>