force-app/main/default/objects/LiveEngage__Object_Mapping__c/fields/LiveEngage__Contact_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Contact_Field_Name__c</fullName>
    <label>Contact Field Name</label>
    <type>TextArea</type>
</CustomField>