force-app/main/default/objects/LiveEngage__Object_Mapping__c/fields/LiveEngage__Contact_is_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Contact_is_Mandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact is Mandatory</label>
    <type>Checkbox</type>
</CustomField>