force-app/main/default/objects/LiveEngage__Object_Mapping__c/fields/LiveEngage__Has_Contact_Field__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Has_Contact_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Contact Field</label>
    <type>Checkbox</type>
</CustomField>