force-app/main/default/objects/LiveEngage__Object_Mapping__c/fields/LiveEngage__Is_Custom__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Is_Custom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Custom</label>
    <type>Checkbox</type>
</CustomField>