force-app/main/default/objects/LiveEngage__Object_Mapping__c/fields/LiveEngage__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>LiveEngage__Object_Type__c</fullName>
    <description>Name of the Salesforce sObject this field mapping configuration applies to.</description>
    <label>Object Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>