force-app/main/default/objects/LiveEngage__Object_Mapping__c/listViews/LiveEngage__All.listView-meta.xml
<ListView>
    <fullName>LiveEngage__All</fullName>
    <columns>NAME</columns>
    <columns>LiveEngage__Object_Type__c</columns>
    <columns>LiveEngage__Is_Custom__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>